# receipt_kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/receipt_kernel/: __init__.py  envelope.py  redact.py  retention.py  stages.py  store_sqlite.py  types.py
src/receipt_kernel/invariants/: __init__.py  _helpers.py  claims_evidence_binding.py  confidence_sanity.py  epistemic_mode_requirements.py  evaluation_completeness.py  finalization_completeness.py  ledger_chain_valid.py  oracle_independence.py  output_bound_to_claims.py  receipt_completeness.py  refs_closed_world.py  run_shape.py  tool_trace_consistency.py
tests/: test_canonical_json.py  test_hallucination_invariants.py  test_invariants_smoke.py  test_ledger_chain.py  test_oracle_independence.py  test_redaction.py  test_retention.py  test_smoke_run.py
