[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipt-kernel"
version = "0.1.0"
description = "Append-only, hash-chained run ledger with invariant evaluation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "James Beck" }
]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/unpingable/receipt_kernel"
Repository = "https://github.com/unpingable/receipt_kernel"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 30
